@@ -1,3 +1,8 @@
+2008-12-07 Borut Razem <borut.razem AT siol.net>
+
+	* support/regression/tests/bitfields.c:
+	  added test case for bug #2366757
+
 2008-12-07 Raphael Neider <rneider AT web.de>
 
 	* src/pic16/glue.c (pic16_printIvalBitFields): prevent
